ReshardingCoordinatorService, Config Collection Deletes Can Time Out Waiting for Replication on Coordinator Doc, Leading to Fatal Assertion

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.1, v5.0
    • Sharding 2021-11-01
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Same as SERVER-61052, we need to create a kWriteConcernMajority constant for the ReshardingCoordinatorService

            Assignee:
            Luis Osta (Inactive)
            Reporter:
            Luis Osta (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: