SERVER-61108 Remove wtimeout from resharding coordinator write concern